--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -47,9 +47,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedUtc)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.NoteId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.NoteId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.NoteId })
+                @Html.ActionLink("Edit", "Edit", new { id = item.NoteID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.NoteID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.NoteID })
             </td>
         </tr>
     }
